--- a/uebung_05/index5.html
+++ b/uebung_05/index5.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-    <html>
+    <html lang="en">
         <head>
-            <meta charset="UTF-8" />
+            <meta  name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8" />
             <title>Geosoftware I - Uebung 4</title>
             <!--Route-->
             <script type="text/javascript" src="data/route.geojson"></script> 
             <!--Functions-->
-            <script type="text/javascript" src="lib/uebung_4.js"></script> 
+            <script type="text/javascript" src="lib/uebung_5.js"></script> 
             <!--Style-->
             <script type="text/javascript" src="lib/jQuerry_3_6_0.js"></script> 
             <!--Leaflet-->
-            <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-            integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-            crossorigin=""/>
-            <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-            integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-            crossorigin=""></script>
+            <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+            <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
             <!--Leaflet Draw-->
             <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.4.10/leaflet.draw.css' rel='stylesheet' />
             <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.4.10/leaflet.draw.js'></script>
@@ -24,17 +20,36 @@
             <!--Open Weather API Key-->
             <script type="text/javascript" src="data/api_keys.js"></script> 
 
+            <!--Bootstrap-->
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+            <!--Style-->
+            <link href="lib/uebung_5.css" rel="stylesheet">
+
             <!--Style for the map container-->
-            <style type="text/css">
-                #mapdiv {height : 600px; width : 600px;}
-            </style>
         </head>
         <body>
+            <div class="container-fluid">
+                <div class="header">
+                    <a class="logo">Weather@Intersections</a>
+                    <div class="header-right"></div>
+                    <!--<input type="button" id="resetButton" value="reset intersections" onclick="resetMap()">
+                    <input type="button" id="resetButton" value="about" onclick="resetMap()">
+                    <input type="button" id="resetButton" value="contact" onclick="resetMap()">-->
+                </div> 
                 <!--div to store the map-->
-                <div id="mapdiv"></div>
-                <!--button to reset the map-->
-                <input type="button" id="resetButton" value="reset intersections" onclick="resetMap()">
-            
+                <div id="mapdiv">
+                </div>
+                <footer class="bg-light text-center text-lg-start">
+                    <!-- Copyright -->
+                    <div class="text-center p-3" style="background-color: rgba(46, 98, 159);">
+                      ©Alexander Pilz 2021:
+                      <a class="text-dark" href="https://github.com/xcomagent95/geosoftware_uebung_1/tree/main/uebung_05"> xcomagent95@GitHub</a>
+                    </div>
+                    <!-- Copyright -->
+                </footer>
+            </div>
             <script>
                 //Map Object
                 var map = L.map('mapdiv'); 
