--- a/uebung_05/index5.html
+++ b/uebung_05/index5.html
@@ -2,7 +2,7 @@
     <html lang="en">
         <head>
             <meta  name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8" />
-            <title>Geosoftware I - Uebung 4</title>
+            <title>Geosoftware I - Uebung 5</title>
             <!--Route-->
             <script type="text/javascript" src="data/route.geojson"></script> 
             <!--Functions-->
@@ -19,29 +19,97 @@
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
             <!--Open Weather API Key-->
             <script type="text/javascript" src="data/api_keys.js"></script> 
-
             <!--Bootstrap-->
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
             <!--Style-->
             <link href="lib/uebung_5.css" rel="stylesheet">
-
-            <!--Style for the map container-->
         </head>
         <body>
+            <div id="bg-head">
+                <h1 id="title" class="d-block p-2 text-white">Geosoftware 1, 2021 - Übung 5</h1>
+                <p id="subtitle" class="d-block p-2 text-white">Weather@Intersection by Alexander Pilz</p> 
+            </div>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div id="navbar_container" class="container-fluid">
+                  <a class="navbar-brand text-white" href="#">Options</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <button type="button" class="btn btn-primary" onclick="resetMap()">
+                        reset Map
+                        </button>
+                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#aboutModal">
+                        About
+                      </button>
+                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactModal">
+                        Contact
+                      </button>
+                      <button type="button" class="btn btn-primary" onclick="goToIfGi()">
+                        IfGi
+                    </button>
+                    </div>
+                  </div>
+                </div>
+            </nav>
             <div class="container-fluid">
                 <!--div to store the map-->
                 <div id="mapdiv">
                 </div>
-                <footer class="bg-light text-center text-lg-start">
-                    <!-- Copyright -->
-                    <div class="text-center p-3" style="background-color: rgba(46, 98, 159);">
-                      ©Alexander Pilz 2021:
-                      <a class="text-dark" href="https://github.com/xcomagent95/geosoftware_uebung_1/tree/main/uebung_05"> xcomagent95@GitHub</a>
+            </div>
+            <footer class="bg-light text-center text-lg-start text-white">
+                <!-- Copyright -->
+                <div class="text-center p-3" style="background-color: rgba(46, 98, 159);">
+                    ©Alexander Pilz 2021:
+                    <a class="text-white" href="https://github.com/xcomagent95/geosoftware_uebung_1/tree/main/uebung_05"> xcomagent95@GitHub</a>
+                </div>
+            </footer>
+
+            <!-- About-Modal -->
+            <div class="modal fade" id="aboutModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="staticBackdropLabel">About</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>
+                                    This website enables the user to draw a rectangle onto the map canvas. The drawn rectangle is then intersected with
+                                    a predefined route. For every intersection, an popup with information about the currect weather, is created. 
+                                    These popups can be viewed by clicking on the corresponding marker. If the map gets to cluttered it can be reset in the 
+                                    options.
+                                </p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
                     </div>
-                    <!-- Copyright -->
-                </footer>
+                </div>
+            </div>
+            <div class="modal fade" id="contactModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="staticBackdropLabel">Contact</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>
+                                This website was created by Alexander Pilz, Student of Geoinformatics at Westfälische Wilhelms-Universität, Münster
+                            </p>
+                            <p>
+                                You can view the code at GitHub or contact me via email at apilz@uni-muenster.de
+                            </p>
+                            </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <script>
                 //Map Object
